<resources>
    <string name="app_name">Professional Pizza Master I</string>
    <string name="next_button">Next</string>
    <string name="how_many_pizzas">How many pizzas today?</string>
    <string name="title_activity_2">Ingredients</string>
    <string name="igt_water_text">Water:</string>
    <string name="igt_flour1_text">Flour - first dose:</string>
    <string name="igt_flour2_text">Flour - second dose:</string>
    <string name="igt_yeast_text">Yeast:</string>
    <string name="igt_sugar_text">Sugar:</string>
    <string name="igt_salt_text">Salt:</string>
    <string name="igt_olive_text">Olive:</string>
    <string name="grams">grams</string>
    <string name="weight">Dough weight:</string>
    <string name="piece_weight">One ball weight:</string>
    <string name="countdown_mieszanie">Stir for</string>
    <string name="flour2">Add second portion of flour</string>
    <string name="countdown_ugniatanie">Knead for</string>
    <string name="fridgeFerm">Leave for fermentation for:</string>
    <string name="riseTemperature">Leave on table to let the dough achieve room temperature:</string>
    <string name="form">Form the dough, add toping and bake. Enjoy!</string>
    <string name="end">Quit</string>
    <string name="kulki">Divide the dough into equal parts and put to the fridge for second fermentation</string>

    //---------------------------------------------------------------
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_3">Activity3</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="countdown_blokFerm">Leave the dough for first fermentation</string>
    <string name="title_activity_9">bug</string>
    <string name="toast">Insert pizzas amount</string>
</resources>